# auth_service

./: .env  .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: asgi.py  config.py
app/db/: __init__.py  models.py  session.py
app/modules/auth/: routes.py
app/modules/auth/db/user/: __init__.py  mapper.py  model.py  repo.py
app/modules/auth/domain/: user.py
app/modules/auth/dtos/: __init__.py  me.py  signin.py  signup.py
app/modules/auth/use_cases/csrf/: __init__.py  controller.py  issue.py
app/modules/auth/use_cases/me/: __init__.py  controller.py  get.py
app/modules/auth/use_cases/signin/: controller.py  signin.py
app/modules/auth/use_cases/signup/: controller.py  signup.py
app/pipeline/: __init__.py  ctx.py  login.py  logout.py
app/routes/: auth.py
app/services/: __init__.py  cookies.py  csrf.py  jwt.py  passwords.py  redis_refresh.py  refresh.py
